commit ejercicio 3 terminado

--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
         <label for="">EJERCICIOS JSTL</label>
     </div>
     <div class="caja-form">
-        <form action="ESTRUTURE/Ejercicio1.jsp" method="post">
-            <button class="boton1" type="submit">Ejercicio1</button>
-        </form>
+        <div>
+            <form action="ESTRUTURE/Ejercicio1.jsp" method="post">
+                <button class="boton1" type="submit">Ejercicio1</button>
+            </form>
+        </div>
+        <div>
+            <form action="ESTRUTURE/Ejercicio2.html" method="post">
+                <button class="boton2" type="submit">Ejercicio2</button>
+            </form>
+        </div>
+        <div>
+            <form action="ESTRUTURE/Ejercicio3.jsp" method="post">
+                <button class="boton3" type="submit">Ejercicio3</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
