--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
                 <button class="boton5"type="submit">Ejercicio5</button>
             </form>
         </div>
+        <div>
+            <form action="ESTRUTURE/Ejercicio6.jsp">
+                <button class="boton6"type="submit">Ejercicio6</button>
+            </form>
+        </div>
+        <div>
+            <form action="ESTRUTURE/ejercicio7.html">
+                <button class="boton7"type="submit">Ejercicio7</button>
+            </form>
+        </div>
+        <div>
+            <form action="ESTRUTURE/Ejercicio8.html">
+                <button class="boton8"type="submit">Ejercicio8</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
