commit subiendo todo

--- a/ESTRUTURE/Ejercicio8.html
+++ b/ESTRUTURE/Ejercicio8.html
@@ -1,42 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/Ejercicio8html.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="../CSS/Ejercicio7.css">
+    <title>Ejercicio5</title>
 </head>
+
 <body>
-    <div class="bg"></div>
-<div class="bg bg2"></div>
-<div class="bg bg3"></div>
-    <div class="caja-all">
-        <form action="Ejercicio8.jsp">
-            <div class="caja-contenido">
-                <div class="container">
-                    <input type="text" name="nombre" id="nombre" required="required">
-                    <label for="nombre">Nombre</label>
-                    <i></i>
+    <div class="contenedor-todo">
+        <h1>EJERCICIO 7</h1>
+        <div class="contenedor-intermedio">
+            <form action="Ejercicio8.jsp">
+                <div class="caja-input">
+                    <label for="delimText">Introdusca el texto con delimitador</label>
+                    <input type="text" name="delimText" id="delimText">
                 </div>
-                <div class="container">
-                    <input type="text" name="apellido1" id="apellido1" required="required">
-                    <label for="apellido1">Apellido1</label>
-                    <i></i>
-                </div>
-                <div class="container">
-                    <input type="text" name="apellido2" id="apellido2" required="required">
-                    <label for="apellido2">Apellido2</label>
-                    <i></i>
-                </div>
-                <div class="container">
-                    <input type="text" name="edad" id="edad" required="required">
-                    <label for="edad">edad</label>
-                    <i></i>
+                <div class="caja-input">
+                    <label for="delim">Introdusca el delimiatador</label>
+                    <input type="text" name="delim" id="delim">
                 </div>
                 <button type="submit">Enviar</button>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </body>
+
 </html>
