--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             </form>
         </div>
         <div>
-            <form action="ESTRUTURE/Ejercicio4.html">
+            <form action="ESTRUTURE/Ejercicio4.jsp">
                 <button class="boton4"type="submit">Ejercicio4</button>
             </form>
         </div>
         <div>
-            <form action="ESTRUTURE/Ejercicio5.jsp">
+            <form action="ESTRUTURE/Ejercicio5.html">
                 <button class="boton5"type="submit">Ejercicio5</button>
             </form>
         </div>
@@ -43,12 +43,17 @@
             </form>
         </div>
         <div>
-            <form action="ESTRUTURE/ejercicio7.html">
+            <form action="ESTRUTURE/ejercicio7.jsp">
                 <button class="boton7"type="submit">Ejercicio7</button>
             </form>
         </div>
         <div>
-            <form action="ESTRUTURE/Ejercicio8.html">
+            <form action="ESTRUTURE/ejercicio8.html">
+                <button class="boton8"type="submit">Ejercicio8</button>
+            </form>
+        </div>
+        <div>
+            <form action="ESTRUTURE/Ejercicio9.html">
                 <button class="boton8"type="submit">Ejercicio8</button>
             </form>
         </div>
